--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<div> 
-    Hello,cutie pie 
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My introduction </title>
+</head>
+<body>
+    
+</body>
+</html>
