--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Welcome to My Simple Page</h1>
         <button id="myButton">Click Me!</button>
         <p id="message"></p>
+        <p>This is puja from a feature</p>
     </div>
     <script src="script.js"></script>
 </body>
